@@ -274,7 +274,6 @@ void do_uncut_text(void);
 
 /* All functions in files.c. */
 void make_new_buffer(void);
-void initialize_buffer(void);
 void initialize_buffer_text(void);
 void open_buffer(const char *filename, bool undoable);
 #ifndef DISABLE_SPELLER
