@@ -11,6 +11,10 @@
 	* src/help.c (help_line_len): Rename and reorder most of it.
 	* src/nano.c (make_new_opennode), src/files.c (initialize_buffer):
 	Remove some duplication in the initialization of a new openfile node.
+	* src/nano.c (make_new_opennode): Don't bother setting things to NULL
+	when they will be intialized right away.
+	* src/files.c (make_new_buffer): Don't bother with a separate function
+	when it's used only once, right there.
 
 2015-08-13  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_find_bracket): Remove mistaken comparison between
